--- a/staff/templates/staff/select/suite.html
+++ b/staff/templates/staff/select/suite.html
@@ -20,6 +20,7 @@
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
     <link href="/static/staff/select/block/style.css" rel="stylesheet">
+    <link href="/static/staff/StaffForms/forms.css" rel="stylesheet">
       
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
@@ -49,8 +50,8 @@
                         </div>
                     {% endfor %}
                 </div>
+                <button type="submit" class="save btn btn-default form-btn">Next</button>
             </form>
-            <button type="submit" class="save btn btn-default form-btn">Next</button>
           </div>
         
           <!-- Progress Bar -->
