--- a/students/static/students/sidebar/sidebar.css
+++ b/students/static/students/sidebar/sidebar.css
@@ -2,7 +2,7 @@
     margin-bottom: 18px;
 }
 
-body,html,.row-offcanvas {
+body, html, .row-offcanvas {
   height:100%;
 }
 
@@ -14,19 +14,63 @@ body {
   width: inherit;
   min-width: 220px;
   max-width: 220px;
-  background-color:#f5f5f5;
+  background-color: dimgray;
   float: left;
   height:100%;
   position:relative;
   overflow-y:auto;
   overflow-x:hidden;
+  color: white;
 }
 
+.sidebar-link {
+    color: white;
+}
+
+.sidebar-link:hover {
+    color: black;
+    border-radius: 0;
+}
+
+.sidebar-nav-item.active > .sidebar-link {
+    background-color: lightgray;
+    color: black;
+    border-radius: 0;
+}
+
+.sidebar-nav-item.active > .sidebar-link:hover {
+    background-color: lightgray;
+    color: black;
+    border-radius: 0;
+}
+        
 #main {
-  height:100%;
-  overflow:auto;
+    height: 100%;
+    overflow: auto;
+    padding-left: 10px;
 }
 
+.sidebar-search {
+    border: 1px solid;
+    border-color: dimgray;
+    border-radius: 0;
+    margin-top: 20px;
+    background-color: #f1f1f1;
+}
+
+.sidebar-search:hover {
+    border: 1px solid;
+    border-color: #fbbd19;
+    background-color: white;
+}
+
+/* when the sidebar is in use */
+.sidebar-search:focus {
+    border: 1px solid;
+    border-color: #fbbd19;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(251, 189, 25, 0.6);
+    background-color: white;
+}
 
 /*
  * off Canvas sidebar
