--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -27,6 +27,7 @@
       
     <!-- CSS for this page -->
     <link rel="stylesheet" href="/static/students/building/building.css">
+    <link rel="stylesheet" href="/static/students/header/header.css">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -116,19 +117,41 @@
       {% else %}
       <div class="col-md-12">
       {% endif %}
-
-        <!-- filter by floor dropdown available if there are rooms left -->
-        {% if num_floors > 1 %}
-        <select id="floorSelect" class="selectpicker floor-selector">
+      
+      <!-- filter by floor dropdown available if there are rooms left -->
+       {% if floors|length > 1 %}
+        <select id="floorFilter" class="selectpicker room-filter">
             <option name="all" value="all">All Floors</option>
             {% for floor in floors %}
-                <option name="{{floor}}" value="{{floor}}">Floor {{floor}}</option>
+                <option name="floor{{floor}}" value="floor{{floor}}">Floor {{floor}}</option>
+            {% endfor %}
+        </select>
+        {% endif %}
+
+        <!-- filter by room type dropdown available, if there are more than 1 type of room -->
+        {% if room_types|length > 1 %}
+        <select id="roomTypeFilter" class="selectpicker room-filter">
+            <option name="all" value="all">All Room Types</option>
+            {% for type in room_types %}
+                <option name="type{{type}}" value="type{{type}}">
+                    {% if type == 'S' %}
+                        Single
+                    {% elif type == 'D' %}
+                        Double
+                    {% elif type == 'T' %}
+                        Triple
+                    {% elif type == 'Q' %}
+                        Quad
+                    {% elif type == 'B' %}
+                        Block
+                    {% endif %}
+                </option>
             {% endfor %}
         </select>
         {% endif %}
           
         <!-- table of all open rooms -->
-        {% if rooms_by_floor %}
+        {% if rooms %}
         <div class="table-responsive">
             <table class="table">
               <thead>
@@ -150,70 +173,142 @@
               </thead>
               <tbody class="room-list">
                 {% comment %}
+                  <!--
                     rooms_by_floor list looks like this:
-                    'rooms_by_floor': {'1': {'101': "", '10': ['101', '110', '152']}}
+                    'rooms_by_floor': {'101': <Room object 101>, '10': [<Room 102>, <Room 110>, <Room 152>]}
+                    -->
                 {% endcomment %}
                   
-                {% for floor, rooms in rooms_by_floor.items %}
-                    {% for room, apt_rooms in rooms.items %}
+                {% for roomNum, apt_rooms in rooms.items %}
+    
+                    <!-- An apartment dropdown -->
+                    {% if apt_rooms|length > 1 %}
+                        {% with first_room=apt_rooms|first %}
+                        {% with apt=first_room.apartment %}
+                        {# fixme: apartments should filter based on the rooms they contain #}
+                        <tr name="{{apt.name}}" class="{{apt.floors}}{{apt.room_types}} table-dropdown table-hoverable">
+                            <td><span class="glyphicon glyphicon-menu-down"></span></td>
+                            <td><strong>{{apt.number}}</strong></td>
+                            <td><strong>Apartment</strong></td>
+                            <td>{{apt.available_beds}}</td>
+                            
+                            <!-- Show Gender -->
+                            {% if show_gender %}
+                            <td>
+                                {% if apt.gender == 'F' %}
+                                    Female
+                                {% elif apt.gender == 'M' %}
+                                    Male
+                                {% endif %}
+                            </td>
+                            {% endif %}
+                              
+                            <!-- Show Pull (none on an apartment) -->
+                            {% if show_pull %}
+                            <td></td>
+                            {% endif %}
+                            
+                            <!-- Show Notes -->
+                            {% if show_notes %}
+                            <td>
+                                {{apt.notes}}
+                            </td>
+                            {% endif %}
+                            
+                        </tr>
                   
-                        <!-- An apartment dropdown -->
-                        {% if apt_rooms|length > 1 %}
-                            {% with first_room=apt_rooms|first %}
-                            {% with apt=first_room.apartment %}
-                            <tr name="{{apt.name}}" class="{{floor}} table-dropdown table-hoverable">
-                              <td><span class="glyphicon glyphicon-menu-down"></span></td>
-                              <td><strong>{{apt.number}}</strong></td>
-                              <td><strong>Apartment</strong></td>
-                              <td>{{apt.available_beds}}</td>
-                              {% if show_gender %}
+                        <!-- Apartment rooms -->
+                        {% for rm in apt_rooms %}
+                            <tr name="{{rm}}" class="apt-room" style="display: none;">
                                 <td>
-                                    {% if apt.gender == 'F' %}
+                                </td>
+                                <td>
+                                    {{rm.number}}
+                                </td>
+                                <td>
+                                {% if rm.room_type == 'S' %}
+                                    Single
+                                {% elif rm.room_type == 'D' %}
+                                    Double
+                                {% elif rm.room_type == 'T' %}
+                                    Triple
+                                {% elif rm.room_type == 'Q' %}
+                                    Quad
+                                {% elif rm.room_type == 'B' %}
+                                    Block
+                                {% else %}
+                                    N/A
+                                {% endif %}
+                                </td>
+                                <td>
+                                    {{rm.available_beds}}
+                                </td>
+                                
+                                <!-- Show Gender -->
+                                {% if show_gender %}
+                                <td>
+                                    {% if rm.gender == 'F' %}
                                         Female
-                                    {% elif apt.gender == 'M' %}
+                                    {% elif rm.gender == 'M' %}
                                         Male
                                     {% endif %}
                                 </td>
-                              {% endif %}
-                              {% if show_pull %}
-                                <td></td>
-                              {% endif %}
-                              {% if show_notes %}
+                                {% endif %}
+                                
+                                <!-- Show Pull -->
+                                {% if show_pull %}
                                 <td>
-                                    {{apt.notes}}
+                                    {% if rm.pull %}
+                                      {{rm.pull}}
+                                    {% endif %}
                                 </td>
-                              {% endif %}
+                                {% endif %}
+                                
+                                <!-- Show Notes -->
+                                {% if show_notes %}
+                                <td>
+                                    {{rm.notes}}
+                                </td>
+                                {% endif %}
+                                
                             </tr>
-                            {% endwith %}
-                            {% endwith %}
+                        {% endfor %}
+                        {% endwith %}
+                        {% endwith %}
                   
-                            <!-- Apartment rooms -->
+                        <!-- Regular room -->
+                        {% else %}
                             {% for rm in apt_rooms %}
-                                <tr name="{{rm}}" class="{{floor}} apt-room" style="display: none;">
-                                  <td>
-                                  </td>
-                                  <td>
-                                      {{rm.number}}
-                                  </td>
-                                  <td>
-                                      {% if rm.room_type == 'S' %}
-                                        Single
-                                      {% elif rm.room_type == 'D' %}
-                                        Double
-                                      {% elif rm.room_type == 'T' %}
-                                        Triple
-                                      {% elif rm.room_type == 'Q' %}
-                                        Quad
-                                      {% elif rm.room_type == 'B' %}
-                                        Block
-                                      {% else %}
-                                        N/A
-                                      {% endif %}
-                                  </td>
-                                  <td>
-                                      {{rm.available_beds}}
-                                    </td>
-                                  {% if show_gender %}
+                            <tr name="{{rm}}" class="floor{{rm.floor}} type{{rm.room_type}} table-dropdown">
+                                <td></td>
+                                <td>{{rm.number}}</td>
+                                
+                                <!-- Room Type -->
+                                <td>
+                                {% if rm.room_type == 'S' %}
+                                    Single
+                                {% elif rm.room_type == 'D' %}
+                                    Double
+                                {% elif rm.room_type == 'T' %}
+                                    Triple
+                                {% elif rm.room_type == 'Q' %}
+                                    Quad
+                                {% elif rm.room_type == 'B' %}
+                                    {# fixme: if morris say apartment not suite #}
+                                    {% if currrent_building.name == "Morris" %}
+                                      Apartment
+                                    {% else %}
+                                      Suite
+                                    {% endif %}
+                                {% else %}
+                                    N/A
+                                {% endif %}
+                                </td>
+                            
+                                <td>{{rm.available_beds}}</td>
+                                
+                                <!-- Show Gender -->
+                                {% if show_gender %}
                                     <td>
                                     {% if rm.gender == 'F' %}
                                         Female
@@ -221,79 +316,36 @@
                                         Male
                                     {% endif %}
                                     </td>
-                                  {% endif %}
-                                  {% if show_pull %}
+                                {% endif %}
+                                
+                                <!-- Show Pull -->
+                                {% if show_pull %}
                                     <td>
                                     {% if rm.pull %}
-                                      {{rm.pull}}
+                                        {{rm.pull}}
                                     {% endif %}
                                     </td>
-                                  {% endif %}
-                                  {% if show_notes %}
+                                {% endif %}
+                                
+                                <!-- Show Notes -->
+                                {% if show_notes %}
                                     <td>
                                         {{rm.notes}}
                                     </td>
-                                  {% endif %}
-                                </tr>
-                            {% endfor %}
-                        {% else %}
-                            {% for rm in apt_rooms %}
-                            <tr name="{{rm}}" class="{{floor}} table-dropdown">
-                              <td></td>
-                              <td>{{rm.number}}</td>
-                              <td>
-                              {% if rm.room_type == 'S' %}
-                                Single
-                              {% elif rm.room_type == 'D' %}
-                                Double
-                              {% elif rm.room_type == 'T' %}
-                                Triple
-                              {% elif rm.room_type == 'Q' %}
-                                Quad
-                              {% elif rm.room_type == 'B' %}
-                                {# fixme: if morris say apartment not suite #}
-                                {% if currrent_building.name == "Morris" %}
-                                  Apartment
-                                {% else %}
-                                  Suite
                                 {% endif %}
-                              {% else %}
-                                N/A
-                              {% endif %}
-                              </td>
-                              <td>{{rm.available_beds}}</td>
-                              {% if show_gender %}
-                                <td>
-                                {% if rm.gender == 'F' %}
-                                    Female
-                                {% elif rm.gender == 'M' %}
-                                    Male
-                                {% endif %}
-                                </td>
-                              {% endif %}
-                              {% if show_pull %}
-                                <td>
-                                {% if rm.pull %}
-                                  {{rm.pull}}
-                                {% endif %}
-                                </td>
-                              {% endif %}
-                              {% if show_notes %}
-                                <td>
-                                    {{rm.notes}}
-                                </td>
-                              {% endif %}
                             </tr>
                             {% endfor %}
                         {% endif %}
-                    {% endfor %}
                 {% endfor %}
               </tbody>
             </table>
           </div><!--table of rooms-->   
+          
+          <!-- if there are no rooms -->
           {% else %}
             <h3>There are currently no available rooms</h3>
           {% endif %}
+          
     </div><!--/first half of screen-->
           
     <!-- horizontal line visible on smaller screens to divide floor plans and open room list -->
@@ -352,7 +404,7 @@
     <script src="/static/students/building/zoom.js" type="text/javascript"></script> 
     <!-- Bootstrap Select plugin for filtering by floor -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
-    <script src="/static/students/building/floorFilter.js"></script>
+    <script src="/static/students/building/filters.js"></script>
     <!-- Script for floor plan thumbnail click function -->
     <script src="/static/students/building/thumbnail.js"></script>
     <!-- Script for dropdown apartments -->
