--- a/students/templates/students/header.html
+++ b/students/templates/students/header.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand navbar-site-name" href="{% url 'home' %}">Site Name</a>
+            <a class="navbar-brand navbar-site-name" href="{% url 'students-home' %}">Site Name</a>
          </div><!--/.navbar-header-->
         
          <!-- Lottery Number - sticks to right hand side -->
