--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -13,7 +13,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">Staff</a>
+          <a class="navbar-brand" href="{% url 'staff-home' %}">Staff</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
